--- a/style.css
+++ b/style.css
@@ -151,3 +151,44 @@ a {
   width: auto;
   height: auto;
 }
+
+.container {
+  margin: 50px;
+  width: auto;
+  position: relative;
+}
+
+.purpose {
+  font-size: 50px;
+  color: var(--navyColor)
+}
+
+.summary {
+  font-size: 25px;
+  color: var(--redColor);
+  font-weight: bolder;
+}
+
+.icon {
+  width: 150px;
+  height: 150px;
+  background-color: var(--navyColor);
+  border-radius: var(--radius);
+  align-content: center;
+  text-align: center;
+  float:left;
+  margin-right: 25px;
+}
+
+.icons {
+  color: var(--backgroundColor);
+  font-size: 25px;
+
+}
+
+.CoreValues {
+  list-style-type: none;
+  height:150px;
+}
+
+
